@@ -1,4 +1,11 @@
-2011-11-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+2011-12-01 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-88
+	* Table definitions and configuration load process have changed 
+	  allowing up to 2048 characters parameter values.(bug 75950).
+	  NOTE: Changes will be applied to HLT_Development in the next technical stop.
+	  
+
+2011-11-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-87
 	* Documentation fields autosave when clicking the tree. (bug 75959).
 	
